# SystemC

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: FindSystemC.cmake
docs/plans/: 2026-02-28-dma-engine-design.md  2026-02-28-dma-engine-plan.md  2026-02-28-project-improvement-design.md  2026-02-28-project-improvement-plan.md
examples/: CMakeLists.txt
examples/01_hello_world/: CMakeLists.txt  Makefile  hello_world.cpp
examples/02_or_gate/: CMakeLists.txt  Makefile  or_gate.cpp
examples/03_and_gate/: CMakeLists.txt  and_gate.cpp
examples/basic_gates/and_gate/: and_gate.cpp  run.pl
examples/basic_gates/or_gate/: or_gate.cpp  run.pl
examples/hello_world/: hello_world.cpp  run.pl
hello_world/: hello_world.cpp  run.pl
projects/: CMakeLists.txt
projects/apb/: CMakeLists.txt
projects/apb/agents/: apb_master_agent.h  apb_master_driver.h  apb_monitor.h
projects/apb/env/: apb_constants.h  apb_env.h  apb_scoreboard.h  apb_sequencer.h  apb_transaction.h
projects/apb/rtl/: apb_if.h  apb_slave.h
projects/apb/rtl/verilog/: apb_slave.v
projects/apb/sequences/: apb_base_sequence.h  apb_read_sequence.h  apb_write_sequence.h
projects/apb/test/: apb_base_test.h  apb_rw_test.h
projects/apb/top/: top.cpp
projects/dma/: CMakeLists.txt
projects/dma/agents/: axi_lite_monitor.h  axi_lite_slave_agent.h  axi_lite_slave_driver.h
projects/dma/env/: axi_lite_transaction.h  dma_constants.h  dma_env.h  dma_scoreboard.h  dma_watchdog.h  memory_model.h
projects/dma/rtl/: axi_lite_if.h  dma_engine.h
projects/dma/rtl/verilog/: dma_engine.v
projects/dma/sequences/: dma_base_sequence.h  dma_xfer_sequence.h
projects/dma/test/: dma_base_test.h  dma_simple_xfer_test.h
projects/dma/top/: top.cpp
projects/sc_testbench/completer_agent/: completer_agent.h  completer_driver.h
projects/sc_testbench/env/: constants.h  env.h  my_sequencer.h  my_transaction.h
projects/sc_testbench/master_agent/: .master_agent.h.swp  master_agent.h  master_driver.h
projects/sc_testbench/requester_agent/: requester_agent.h  requester_driver.h
projects/sc_testbench/sim/: Modernization_Guide.md  README.md  run.pl  spec.py
projects/sc_testbench/slave_agent/: slave_agent.h  slave_driver.h
projects/sc_testbench/test/: test.h
projects/sc_testbench/top/: test.h  top.cpp
